# VTS-GUI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start.bat  vts-gui.py
pipeline/: transcription_pipeline.py  translation_pipeline.py
src/vts-gui/: __init__.py  main.py
src/vts-gui/pipeline/: utils.py
src/vts_gui/: __init__.py  main.py
src/vts_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vts_gui/pipeline/: __init__.py  postprocessing_pipeline.py
vts_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
